Fix ci_scripts location

--- a/ios/RetireRightFresh/Info.plist
+++ b/ios/RetireRightFresh/Info.plist
@@ -33,8 +33,8 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>We use Face ID to securely access your financial plan</string>
 	<key>RCTNewArchEnabled</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
